--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,24 @@ body {
   scroll-behavior: smooth;
 }
 
+/* For Webkit browsers (Chrome, Safari, newer versions of Opera) */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(160, 160, 199)
+}
+
+::-webkit-scrollbar-thumb {
+  background: #6b21a8;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #4d167a;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
