--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@ body {
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
+  background-color: white;
 }
 
 /* For Webkit browsers (Chrome, Safari, newer versions of Opera) */
