Theme setup done and navbar compatible with theme

--- a/main/app/globals.css
+++ b/main/app/globals.css
@@ -13,6 +13,17 @@ body {
   background-color: white;
 }
 
+
+:root {
+  --background: white;
+  --foreground: black;
+}
+
+[data-theme='dark'] {
+  --background: black;
+  --foreground: white;
+}
+
 /* For Webkit browsers (Chrome, Safari, newer versions of Opera) */
 ::-webkit-scrollbar {
   width: 8px;
